# internal/models/parameters.go
@@ -1,0 +1,6 @@
+package models
+
+type Params struct {
+	Group string `json:"group"`
+	Song  string `json:"song"`
+}
